--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The Legend of SimonDev</title>
+  <title>The Legend of Josh</title>
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <link rel="stylesheet" type="text/css" href="base.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -41,13 +41,13 @@
           <div class="stats-title">Statistics</div>
           <div class="stats-row">
             <div class="stats-tooltip">Strength
-              <div class="stats-tooltiptext">How strong you are, affects how much damage you do. So blah blah if you're doing stuff then its stronger or whatever, the damage is up. This is text to show the tooltip.</div>
+              <div class="stats-tooltiptext">How strong you are, affects how much damage you do.</div>
             </div>
             <div id="stats-strength">0</div>
           </div>
           <div class="stats-row">
             <div class="stats-tooltip">Wisdomness
-              <div class="stats-tooltiptext">Wisdom is the guage of something to do with wisdom in the game because wisdom is important and wisdom is wise to wisdoming.</div>
+              <div class="stats-tooltiptext">Wisdom is the guage of something to do with wisdom in the game.</div>
             </div>
             <div id="stats-wisdomness">0</div>
           </div>
@@ -65,7 +65,7 @@
           </div>
           <div class="stats-row">
             <div class="stats-tooltip">XP
-              <div class="stats-tooltiptext">How much xp you've accumulated by killing things for xp. Get enough and you'll gain a level or something.</div>
+              <div class="stats-tooltiptext">How much xp you've accumulated by killing things for xp.</div>
             </div>
             <div id="stats-experience">0</div>
           </div>
